# Embedded-C-Testing

./: .gitignore  README.md
GoogleTest/GTestProject0/: CMakeLists.txt  Employee.hpp  EmployeeManager.cpp  EmployeeManager.hpp  IDataBaseConnection.hpp  IDatabaseConnection.cpp  IDatabaseConnection.hpp  LibraryCode.cpp  LibraryCode.hpp  cbr.sh  main.cpp  nonCMakeExec  testRunner.cpp
lab/: start_lab  start_lab.bat
lab/Logger/: project.yml
lab/Logger/auto/: fix_checksum.rb  hot_melt.rb  quick_compare.rb
lab/Logger/inc/: Core.h  Defs.h  LPC1768.h  core_cm3.h
lab/Logger/micro/: LPC1768.ld  startup_LPC17xx.S  (+1 more)
lab/diy/: DoubleAndPass.c  MockPoster.h  Poster.c  makefile
sandbox/: Tenmw_f.c  Tenmw_simple.c  args1  enum  enum.c  hola  hola.c  pizza  reading_cmd_ln_args.c  sport.sh  test  test0.c
sandbox/DoodleBox/: Makefile  doodleBox.c
sandbox/IPC/: Socket_API_Review_0.c  pthreads0  pthreads_0.c
sandbox/bash_fun/: delay.sh  env_vars.sh  greeting.sh  guess.sh  loops.sh  options.sh  pfunc.sh  pipe.sh  proc.sh  prompt.sh  read3.sh  readit.sh  test0.txt
stm32/: bitwise1  bitwise_ex1.c  led_on1.c
stm32/struct_example/: main.c  main.h
testing_docs/: get_file_time_stats1.c  log2.txt  mcpu_log.txt  timestats1
testing_docs/RPI_Files/: RPI_UART.c  RPI_reflex_v0.c
testing_docs/templates/: create_procs1.c  createproc1  r_store_fnames1.c  rsfnames1  time_stamper1.c  tstamper
testing_in_unity/CW_10mw/: .out  makefile
testing_in_unity/LP_Filter/: makefile
testing_in_unity/initial_tests/: makefile
testing_in_unity/led_driver/: led_driver_test.c  rights.txt
(+223 files in other folders)
